--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@trpc/react": "^9.27.2",
     "@trpc/server": "^9.27.2",
     "next": "12.3.1",
+    "pusher": "^5.1.1-beta",
+    "pusher-js": "^7.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.2",
