--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "pusher-js": "^7.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-qr-code": "^2.0.8",
     "react-query": "^3.39.2",
     "zod": "^3.19.1"
   },
